--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9328,7 +9328,7 @@ header .header-style-two {
 // Home3 More-update section
 
 .more-update-section{
-  background: linear-gradient(91.22deg, rgba(0, 5, 15, 0.8) 24.54%, rgba(0, 5, 15, 0.2) 100%), url('../../../public/images/banner/update-bg.png');
+  background: linear-gradient(91.22deg, rgba(0, 5, 15, 0.8) 24.54%, rgba(0, 5, 15, 0.2) 100%), url('../../public/images/banner/update-bg.png');
   background-size: cover;
   background-repeat: no-repeat;
   padding: 90px 30px;
